--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
     "ngx-bootstrap": "^3.1.4",
+    "ngx-currency": "^1.5.1",
     "ngx-toastr": "^9.1.1",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
